syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.cht.easygrpc";
option java_outer_classname = "EasyGrpcProto";
option objc_class_prefix = "HLW";


service EasyGrpcService {
  rpc call (EasyGrpcRequest) returns (EasyGrpcResponse) {}
}

message EasyGrpcRequest {
  string reqId = 1;
  string rpcId = 2;
  string iface = 3;
  string method = 4;
  string requestJson = 5;
}


message EasyGrpcResponse {
  int32 code = 1;
  string msg = 2;
  string resultJson = 3;
}


